<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="_bg__frame_3" type="id" />
    <item name="registration" type="id" />
    <item name="btnSignUp" type="id" />
    <item name="shape_with_text_ek10" type="id" />
    <item name="shape_with_text_ek11" type="id" />
    <item name="shape_with_text_ek12" type="id" />
    <item name="__________________ivan293_" type="id" />
    <item name="shape_with_text_ek13" type="id" />
    <item name="______________" type="id" />
    <item name="_bg___frame_7_ek1" type="id" />
    <item name="shape_with_text_ek14" type="id" />
    <item name="shape_with_text_ek15" type="id" />
    <item name="shape_with_text_ek16" type="id" />
    <item name="shape_with_text_ek17" type="id" />
    <item name="_bg__frame_15_ek1" type="id" />
    <item name="shape_with_text_ek18" type="id" />
    <item name="___________" type="id" />
    <item name="__" type="id" />
    <item name="Create" type="id" />
    <item name="Return" type="id" />
    <item name="Scenarious" type="id" />
    <item name="CreateNew" type="id" />
    <item name="CreateWLink" type="id" />
    <item name="type_input" type="id" />
    <item name="scenName" type="id" />
    <item name="NameOfScene" type="id" />
    <item name="TypeOfScene" type="id" />
    <item name="TableRowSc" type="id" />
    <item name="table" type="id" />
    <item name="scrollTable" type="id" />
    <item name="form1" type="id" />
    <item name="a" type="id" />
    <item name="b" type="id" />
    <item name="addRow" type="id" />
    <item name="removeRow" type="id" />
    <item name="assist1" type="id" />
    <item name="assist2" type="id" />
    <item name="assist3" type="id" />
    <item name="assistent" type="id" />
    <item name="categoryAssist" type="id" />
    <item name="email" type="id" />
    <item name="userName" type="id" />
    <item name="btnBack" type="id" />
    <item name="btnLogOut" type="id" />
    <item name="age" type="id" />
</resources>