...
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					>


					<Button
						android:id="@+id/btnLogin"
						android:layout_width="289dp"
						android:layout_height="87dp"
						android:layout_centerHorizontal="true"

						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
...
